rnsc/test_data/rns_integration/error/parser/type_hints/long/missing_operand.rns
.class @long
.super java/lang/Object
